<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">点唱机X</string>
    <string name="what_do_you_want_to_share">想分享哪些内容</string>
    <string name="currently_listening_to_x_by_x">正在播放 %2$s 的 %1$s</string>
    <string name="the_audio_file">音频文件</string>
    <string name="x_has_been_set_as_ringtone">%1$s 已设为铃声</string>
    <string name="action_set_as_ringtone">设为铃声</string>
    <string name="action_share">分享歌曲</string>
    <string name="action_settings">"设置"</string>
    <string name="action_grant">授予</string>
    <string name="action_about">关于</string>
    <string name="action_clear_playlist">清空歌单</string>
    <string name="action_add_to_favorites">添加到收藏</string>
    <string name="action_remove_from_favorites">从收藏中移除</string>
    <string name="action_search">搜索</string>
    <string name="action_play_next">下首播放</string>
    <string name="action_play">播放全部</string>
    <string name="action_play_pause">播放/暂停</string>
    <string name="action_previous">上一首</string>
    <string name="action_next">下一首</string>
    <string name="action_add_to_playing_queue">加入队列</string>
    <string name="action_remove_from_playing_queue">移出队列</string>
    <string name="action_add_to_playlist" tools:ignore="TypographyEllipsis">加入歌单</string>
    <string name="action_tag_editor">标签编辑</string>
    <string name="action_delete_from_device">删除歌曲</string>
    <string name="action_details">歌曲详情</string>
    <string name="action_rename">重命名歌单</string>
    <string name="action_delete">删除歌单</string>
    <string name="action_scan">扫描</string>
    <string name="action_set_as_start_directory">设为起始目录</string>
    <string name="albums">专辑</string>
    <string name="artists">歌手</string>
    <string name="songs">歌曲</string>
    <string name="genres">流派</string>
    <string name="online">在线</string>
    <string name="playlists">歌单</string>
    <string name="unplayable_file">无法播放该歌曲</string>
    <string name="biography_unavailable">找不到该歌手的信息</string>
    <string name="wiki_unavailable">找不到该专辑的百科数据</string>
    <string name="biography">歌手简介</string>
    <string name="wiki">百科一下</string>
    <string name="audio_focus_denied">无法获取音频焦点</string>
    <string name="album">专辑</string>
    <string name="artist">歌手</string>
    <string name="album_artist">专辑歌手</string>
    <string name="year">年份</string>
    <string name="track_hint">"音轨（如用 2 表示第 2 首歌或用 3004 表示 CD3 里的第 4 首歌）"</string>
    <string name="lyrics">歌词</string>
    <string name="album_or_artist_empty">标题或歌手名称为空</string>
    <string name="saving_changes">正在保存更改</string>
    <string name="label_details">详情</string>
    <string name="label_file_name">文件名</string>
    <string name="label_file_path">文件路径</string>
    <string name="label_file_size">文件大小</string>
    <string name="label_file_format">格式</string>
    <string name="label_track_length">长度</string>
    <string name="label_bit_rate">比特率</string>
    <string name="label_sampling_rate">采样率</string>
    <string name="action_go_to_artist">查看歌手</string>
    <string name="action_go_to_album">查看专辑</string>
    <string name="label_playing_queue">播放队列</string>
    <string name="no_results">没有找到结果</string>
    <string name="updating">正在更新</string>
    <string name="added_title_to_playing_queue">"此歌曲已加入播放队列"</string>
    <string name="added_x_titles_to_playing_queue">%1$d 首歌曲已加入播放队列</string>
    <string name="action_remove_from_playlist">移出列表</string>
    <string name="action_grid_size">网格尺寸</string>
    <string name="action_grid_size_land">网格尺寸（横屏）</string>
    <string name="action_shuffle_all">随机播放歌曲</string>
    <string name="action_shuffle_album">随机播放该专辑</string>
    <string name="action_shuffle_artist">随机播放该歌手</string>
    <string name="action_shuffle_playlist">随机播放该歌单</string>
    <string name="action_clear_playing_queue">清空播放队列</string>
    <string name="action_save_playing_queue">保存播放队列</string>
    <string name="action_go_to_start_directory">跳转至起始目录</string>
    <string name="action_show_lyrics">显示歌词</string>
    <string name="inserted_x_songs_into_playlist_x">%1$d 首歌曲已加入到歌单 %2$s</string>
    <string name="created_playlist_x">歌单 %1$s 已创建</string>
    <string name="deleted_x_songs">%1$d 首歌曲已删除</string>
    <string name="playlist_exists">歌单 %1$s 已存在</string>
    <string name="could_not_create_playlist">无法创建播放列表</string>
    <string name="clear_playlist_x"><![CDATA[是否清空歌单 <b>%1$s</b>]]></string>
    <string name="delete_playlist_x"><![CDATA[是否删除歌单 <b>%1$s</b>]]></string>
    <string name="delete_x_playlists"><![CDATA[是否删除 <b>%1$d</b> 个歌单]]></string>
    <string name="delete_song_x"><![CDATA[是否删除歌曲 <b>%1$s</b>]]></string>
    <string name="delete_x_songs"><![CDATA[是否删除 <b>%1$d</b> 首歌曲]]></string>
    <string name="delete_playlist_title">删除歌单</string>
    <string name="delete_playlists_title">删除多个歌单</string>
    <string name="remove_song_x_from_playlist"><![CDATA[是否从歌单中移除 <b>%1$s</b>]]></string>
    <string name="remove_x_songs_from_playlist"><![CDATA[是否从歌单中移除 <b>%1$d</b> 首歌曲]]></string>
    <string name="save_playlist_title">另存为</string>
    <string name="save_playlists_title">另存为</string>
    <string name="add_playlist_title">"添加到歌单"</string>
    <string name="select_all_title">全部选中</string>
    <string name="light_theme_name">浅色</string>
    <string name="dark_theme_name">暗色</string>
    <string name="black_theme_name">黑色（AMOLED）</string>
    <string name="always">总是</string>
    <string name="only_on_wifi">仅在 WiFi 下</string>
    <string name="never">从不</string>
    <string name="today">今日</string>
    <string name="this_week">本周</string>
    <string name="past_seven_days">过去7天</string>
    <string name="this_month">本月</string>
    <string name="past_three_months">过去三个月</string>
    <string name="this_year">本年</string>
    <string name="equalizer">音乐均衡器</string>
    <string name="dialog_sleeper_min">分</string>
    <string name="pref_header_colors">颜色</string>
    <string name="pref_header_now_playing_screen">正在播放界面</string>
    <string name="pref_title_general_theme">全局主题</string>
    <string name="pref_header_audio">声音</string>
    <string name="pref_header_library">歌曲库</string>
    <string name="pref_header_images">图片</string>
    <string name="pref_header_lockscreen">锁屏</string>
    <string name="pref_header_playlists">歌单</string>
    <string name="pref_header_notification">通知</string>
    <string name="pref_header_id">设备ID</string>
    <string name="pref_title_navigation_bar">着色导航栏</string>
    <string name="pref_title_app_shortcuts">着色应用快捷方式</string>
    <string name="pref_title_album_art_on_lockscreen">显示专辑封面</string>
    <string name="pref_title_auto_download_metadata">自动下载元数据</string>
    <string name="pref_title_blurred_album_art">专辑封面模糊化</string>
    <string name="pref_title_colored_notification">启用通知背景着色</string>
    <string name="pref_title_classic_notification">经典通知样式</string>
    <string name="pref_title_ignore_media_store_artwork">忽略媒体储存中的专辑封面</string>
    <string name="pref_title_gapless_playback">无缝播放</string>
    <string name="pref_title_audio_ducking">音频焦点丢失时降低音量</string>
    <string name="pref_title_last_added_interval">最近添加歌单间隔</string>
    <string name="pref_title_synchronized_lyrics_show">显示同步歌词</string>
    <string name="pref_title_remember_last_tab">记住最后打开页面</string>
    <string name="pref_title_audio_default">使用系统自带均衡器</string>
    <string name="no_equalizer">没有找到均衡器</string>
    <string name="no_audio_ID">"请在播放歌曲后再次尝试此操作"</string>
    <string name="delete_action">删除</string>
    <string name="clear_action">清空</string>
    <string name="remove_action">移除</string>
    <string name="rename_action">重命名</string>
    <string name="create_action">创建</string>
    <string name="reset_action">重置</string>
    <string name="x_selected">已选择 %1$d</string>
    <string name="primary_color">主色调</string>
    <string name="accent_color">强调色</string>
    <string name="primary_color_desc">主题主色调，默认为靛蓝色</string>
    <string name="accent_color_desc">主题强调色，默认为粉色</string>
    <string name="update_image">更新图片</string>
    <string name="playlist_empty_text">一个也没有耶</string>
    <string name="no_playlists">没有歌单</string>
    <string name="no_albums">没有专辑</string>
    <string name="no_songs">没有歌曲</string>
    <string name="no_artists">没有歌手</string>
    <string name="no_genres">没有流派</string>
    <string name="empty">空</string>
    <string name="playlist_name_empty">歌单名称</string>
    <string name="song">歌曲</string>
    <string name="pref_summary_album_art_on_lockscreen">使用当前播放曲目的专辑封面作为锁屏壁纸</string>
    <string name="pref_summary_blurred_album_art">模糊化显示锁屏界面内的专辑封面此功能或与第三方应用及桌面插件产生冲突</string>
    <string name="pref_summary_classic_notification">使用经典通知样式</string>
    <string name="pref_summary_colored_notification">使用与专辑封面相匹配的颜色着色通知背景色</string>
    <string name="pref_summary_gapless_playback">在某些设备上会造成播放问题</string>
    <string name="pref_summary_ignore_media_store_artwork">可以提高专辑封面图片的质量但加载时间也会更长仅当遇到专辑封面像素过低时建议开启</string>
    <string name="pref_summary_colored_navigation_bar">用主色调着色导航栏</string>
    <string name="pref_summary_colored_app_shortcuts">用主色调着色应用快捷方式</string>
    <string name="pref_summary_audio_ducking">通知、导航等</string>
    <string name="pref_summary_synchronized_lyrics_show">当前仅支持 LRC 格式同步歌词内嵌或外置均可</string>
    <string name="pref_summary_remember_last_tab">启动时跳转到最后打开页面</string>
    <string name="could_not_download_album_cover">无法下载到匹配的专辑封面</string>
    <string name="search_hint">搜索歌曲库</string>
    <string name="favorites">收藏夹</string>
    <string name="last_added">最近添加</string>
    <string name="history">播放历史</string>
    <string name="my_top_tracks">最爱歌曲</string>
    <string name="remove_cover">移除专辑封面</string>
    <string name="download_from_last_fm">从 Last.fm 上下载</string>
    <string name="pick_from_local_storage">从本地储存中选取</string>
    <string name="web_search">在网络上搜索</string>
    <string name="action_sleep_timer">睡眠定时器</string>
    <string name="action_set">设置</string>
    <string name="cancel_current_timer">取消定时器</string>
    <string name="sleep_timer_canceled">定时器已取消</string>
    <string name="sleep_timer_set">音乐将在 %d 分钟后停止播放</string>
    <string name="action_new_playlist">新建歌单</string>
    <string name="new_playlist_title">新建歌单</string>
    <string name="colored_footers">着色页脚</string>
    <string name="special_thanks_to">特别鸣谢</string>
    <string name="changelog">更新日志</string>
    <string name="licenses">许可信息</string>
    <string name="permissions_denied">未能获取权限</string>
    <string name="permission_external_storage_denied">访问外部存储权限被拒绝</string>
    <string name="support_development">支持开发者</string>
    <string name="buy_pro">激活高级功能</string>
    <string name="could_not_restore_purchase">无法恢复购买状态</string>
    <string name="restored_previous_purchase_please_restart">尽情享受吧</string>
    <string name="bug_report_issue">问题</string>
    <string name="title">标题</string>
    <string name="description">说明</string>
    <string name="activity_equalizer_title_general">通用</string>
    <string name="activity_equalizer_title_base">基本音效</string>
    <string name="activity_equalizer_title_special">特殊音效</string>
    <string name="activity_equalizer_switch_general">均衡器</string>
    <string name="activity_equalizer_switch_bass">低音增强</string>
    <string name="activity_equalizer_switch_virtualizer">虚拟环绕</string>
    <string name="activity_equalizer_switch_echo">回声消除</string>
    <string name="activity_equalizer_switch_auto">自动增强</string>
    <string name="activity_equalizer_switch_noise">智能降噪</string>
    <string name="activity_equalizer_summary_echo">可以消除某些特殊状态下产生的回声</string>
    <string name="activity_equalizer_summary_auto">用于自动平衡软件内所有音乐的音量</string>
    <string name="activity_equalizer_summary_noise">智能降低播放某些音乐时产生的噪音</string>
    <string name="activity_equalizer_summary_virtualizer">处理多声道的信号，让人感觉到环绕声的效果</string>
    <string name="activity_equalizer_summary_bass">可以产生更加深邃、浑厚、富有弹性的低音</string>
    <string name="activity_equalizer_summary_preset">预设均衡器配置</string>
    <string name="activity_equalizer_summary_equalizer">调节不同频率的电信号的补偿声效和声场的缺陷</string>
</resources>