<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_equalizer_layout"
    tools:context="com.peter1303.phonograph.ui.activities.EqualizerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include layout="@layout/status_bar" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status_bar"
            android:background="@color/md_red_500"
            tools:ignore="ObsoleteLayoutParam,UnusedAttribute">

            <androidx.appcompat.widget.Toolbar
                android:id = "@+id/equalizer_toolbar"
                style="@style/Toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                android:background="@android:color/transparent" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ScrollViewSize">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:id = "@+id/activity_equalizer_title_general"
                            android:text="@string/activity_equalizer_title_general" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/activity_equalizer_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_equalizer_switch_general" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_equalizer_summary_equalizer" />

                        <LinearLayout
                            android:id="@+id/activity_equalizer_seekbar_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="vertical">

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:tag=":aesthetic_ignore"
                            android:text="@string/activity_equalizer_summary_preset" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:id="@+id/activity_equalizer_spinner"
                            android:entries="@array/preset_equalizer" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/activity_equalizer_title_base"
                            android:layout_marginBottom="16dp"
                            android:text="@string/activity_equalizer_title_base" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/activity_equalizer_bass_boost_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_equalizer_switch_bass" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_equalizer_summary_bass" />

                        <androidx.appcompat.widget.AppCompatSeekBar
                            android:id="@+id/activity_equalizer_bass_seekbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="0dp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/activity_equalizer_virtualizer_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/activity_equalizer_switch_virtualizer" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_equalizer_summary_virtualizer" />

                        <androidx.appcompat.widget.AppCompatSeekBar
                            android:id="@+id/activity_equalizer_virtualizer_seekbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="0dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id = "@+id/activity_equalizer_title_special"
                            android:layout_marginBottom="16dp"
                            android:text="@string/activity_equalizer_title_special" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/activity_equalizer_acoustic_echo_canceler_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_equalizer_switch_echo" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_equalizer_summary_echo" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/activity_equalizer_automatic_gain_control_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/activity_equalizer_switch_auto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_equalizer_summary_auto" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/activity_equalizer_noise_suppressor_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/activity_equalizer_switch_noise" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_equalizer_summary_noise" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>